--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -191,8 +191,11 @@ li:before {
   }
 }
 
+#stockphoto{
 
-@media screen and (min-width: 50em) {
+
+}
+@media screen and (min-width: 40em){
 
   .body-container{
     background-image: url("/images/bgphoto3.jpg");
@@ -202,11 +205,10 @@ li:before {
       //background-position:center; /* IE fix */
 
   }
-
   #content-container{
-    width: 645px;
+    width: 95%;
     height: 100%;
-    margin-left: 25%;
+    margin-left: 2.5%;
 
   }
 
@@ -278,30 +280,21 @@ li:before {
 
   margin-top: 25px;
   h3{
-    color: white;
-    letter-spacing: 0.15em;
-    text-transform: uppercase;
-    font-family: Helvetica Neue;
     font-size: 13px;
     font-weight: 300;
   }
   input{
     width: 230px;
     height: 20px;
-    font-family: $lato;
     margin-top: 13px;
     font-size: 12px;
-    padding: 7px;
-    border: none;
+
   }
   button{
     margin-top:35px;
-    font-family: $lato;
-    text-transform: uppercase;
     font-size: 10px;
     color: white;
-    letter-spacing: 0.15em;
-    background-color: rgb(0,181,228);
+
     border: none;
     transition: all 0.3s ease;
   }
@@ -311,9 +304,7 @@ li:before {
 
 }
 
-
 #stockphoto{
-
   padding-top: 10px;
 }
 .footer{
@@ -333,5 +324,27 @@ li:before {
     margin-top:35px;
   }
 }
+
+}
+
+
+@media screen and (min-width: 50em) {
+
+  .body-container{
+    background-image: url("/images/bgphoto3.jpg");
+    width: 100%;
+    background-color: none;
+    background-repeat: no-repeat;
+      //background-position:center; /* IE fix */
+
+  }
+
+  #content-container{
+    width: 645px;
+    height: 100%;
+    margin-left: 25%;
+
+  }
+
 
 }
