--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -211,6 +211,16 @@ li:before {
      padding: 30px;
    }
  }
+ .footer{
+   p{
+     margin-top:40px;
+     padding-right: 30px;
+
+   }
+   img{
+     margin: 30px;
+   }
+ }
 }
 
 
