--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,4 @@
- // Bourbon & Neat
+// Bourbon & Neat
 @import '../../bower_components/bourbon/dist/bourbon';
 @import '../../bower_components/neat/app/assets/stylesheets/neat';
 @import url(http://weloveiconfonts.com/api/?family=entypo);
@@ -9,37 +9,37 @@ $lato: 'Lato', sans-serif;
 
 /* entypo */
 [class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-  padding-left: 5px;
+ font-family: 'entypo', sans-serif;
+ padding-left: 5px;
 }
 // Custom Styles
 .body-container{
-  background-color: rgba(13,153,214,1);
-  width: 100%;
-  background-repeat: no-repeat;
+ background-color: rgba(13,153,214,1);
+ width: 100%;
+ background-repeat: no-repeat;
 
 
 }
 
 
 li:before {
-  content: ">";
-  display: inline-block;
-  margin-left: -1.6em;
-  width: 1.3em;
+ content: ">";
+ display: inline-block;
+ margin-left: -1.6em;
+ width: 1.3em;
 }
 
 #content-container{
-  width: 100%;
+ width: 100%;
 
 }
 #header-logo{
-  height: 78px;
-  width: 100%;
-  img{
-    float: right;
-    padding: 15px;
-  }
+ height: 78px;
+ width: 100%;
+ img{
+   float: right;
+   padding: 15px;
+ }
 }
 
 .webinar-header{
@@ -49,346 +49,687 @@ li:before {
 
 
 .content-left{
- width: 100%;
+width: 100%;
 
- h1,h3,.details{
-   color: white;
-   padding-left: 15px;
-   padding-right: 15px;
- }
- h2, p, li{
-   color: white;
-   padding-right: 15px;
-   padding-left: 15px;
- }
- h3{
+h1,h3,.details{
+  color: white;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+h2, p, li{
+  color: white;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+h3{
 
-   letter-spacing: 0.5em;
-   text-transform: uppercase;
-   font-family: Helvetica Neue;
-   font-size: 16px;
-   font-weight: 300;
+  letter-spacing: 0.5em;
+  text-transform: uppercase;
+  font-family: Helvetica Neue;
+  font-size: 16px;
+  font-weight: 300;
 
- }
- h1{
-   font-family: $montserrat;
-   letter-spacing: 0.15em;
-   text-transform: uppercase;
-   font-size: 22px;
-   margin-top: 2px;
+}
+h1{
+  font-family: $montserrat;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  font-size: 22px;
+  margin-top: 2px;
 
- }
- .details{
-   padding-top: 8px;
-   line-height: 23px;
-   font-family:  $lato;
-   font-size: 20px;
-   letter-spacing: 0.05em;
-   font-weight: 300;
+}
+.details{
+  padding-top: 8px;
+  line-height: 23px;
+  font-family:  $lato;
+  font-size: 20px;
+  letter-spacing: 0.05em;
+  font-weight: 300;
 
- }
- h2{
-   font-family: $montserrat;
-   letter-spacing: 0.15em;
-   font-size: 18px;
-   text-transform: uppercase;
-   margin-top: 27px;
-   font-weight: 300;
- }
- span{
-   font-family: $lato;
-   letter-spacing: .09em;
-   text-transform: none;
-   font-weight: 300;
-   font-size: 16px;
-   line-height: 18px;
- }
- p{
-   font-family: $lato;
-   line-height: 21px;
-   letter-spacing: .09em;
-   text-transform: none;
-   font-weight: 300;
-   padding-right: 40px;
-   font-size: 16px;
+}
+h2{
+  font-family: $montserrat;
+  letter-spacing: 0.15em;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-top: 27px;
+  font-weight: 300;
+}
+span{
+  font-family: $lato;
+  letter-spacing: .09em;
+  text-transform: none;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 18px;
+}
+p{
+  font-family: $lato;
+  line-height: 21px;
+  letter-spacing: .09em;
+  text-transform: none;
+  font-weight: 300;
+  padding-right: 40px;
+  font-size: 16px;
 
- }
- li{
-   list-style-type: none;
-   padding-left: 18px;
-   padding-right: 20px;
-   text-align:left;
-   font-family: $lato;
-   line-height: 18px;
-   letter-spacing: .09em;
-   text-transform: none;
-   font-weight: 300;
-   font-size: 16px;
-   padding-top:7px;
- }
+}
+li{
+  list-style-type: none;
+  padding-left: 18px;
+  padding-right: 20px;
+  text-align:left;
+  font-family: $lato;
+  line-height: 18px;
+  letter-spacing: .09em;
+  text-transform: none;
+  font-weight: 300;
+  font-size: 16px;
+  padding-top:7px;
+}
 
 
 }
 
 .content-right{
-  margin: 15px;
+ margin: 15px;
 }
 
 .register{
-  margin-top: 35px;
-  h3{
-    color: white;
-    letter-spacing: 0.15em;
-    text-transform: uppercase;
-    font-family: Helvetica Neue;
-    font-size: 18px;
-    font-weight: 300;
-  }
-  input{
-    height: 30px;
-    width: 100%;
-    font-family: $lato;
-    margin-top: 17px;
-    font-size: 16px;
-    padding: 7px;
-    border: none;
-  }
-  button{
-    margin-top:35px;
-    font-family: $lato;
-    text-transform: uppercase;
-    font-size: 16px;
-    color: white;
-    letter-spacing: 0.15em;
-    background-color: rgb(0,181,228);
-    border: none;
-    transition: all 0.3s ease;
-  }
-  button:hover{
-    background-color: black;
-  }
+ margin-top: 35px;
+ h3{
+   color: white;
+   letter-spacing: 0.15em;
+   text-transform: uppercase;
+   font-family: Helvetica Neue;
+   font-size: 18px;
+   font-weight: 300;
+ }
+ input{
+   height: 30px;
+   width: 100%;
+   font-family: $lato;
+   margin-top: 17px;
+   font-size: 16px;
+   padding: 7px;
+   border: none;
+ }
+ button{
+   margin-top:35px;
+   font-family: $lato;
+   text-transform: uppercase;
+   font-size: 16px;
+   color: white;
+   letter-spacing: 0.15em;
+   background-color: rgb(0,181,228);
+   border: none;
+   transition: all 0.3s ease;
+ }
+ button:hover{
+   background-color: black;
+ }
 
 
 }
 
 .footer{
-  clear: both;
-  overflow: auto;
-  height: 85px;
-  p{
-    color: white;
-    margin-top:30px;
-    padding-right: 25px;
-    float: right;
-    font-size: 9px;
-    color: rgb(236,249,255);
-    //margin-left: 30px;
-  }
-  img{
-    float: left;
-    margin: 15px;
-  }
+ clear: both;
+ overflow: auto;
+ height: 85px;
+ p{
+   color: white;
+   margin-top:30px;
+   padding-right: 25px;
+   float: right;
+   font-size: 9px;
+   color: rgb(236,249,255);
+   //margin-left: 30px;
+ }
+ img{
+   float: left;
+   margin: 15px;
+ }
 }
 
 
 @media screen and (min-width: 30em){
- .content-left{
- h1,h3,.details{
-   padding-left: 30px;
-   padding-right: 30px;
- }
- h2, p, li{
-   padding-right: 30px;
-   padding-left: 30px;
- }
- }
- .content-right{
-   margin: 30px;
- }
- #header-logo{
-   img{
-     float: right;
-     padding: 30px;
-   }
- }
- .footer{
-   p{
-     margin-top:40px;
-     padding-right: 30px;
+.content-left{
+h1,h3,.details{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+h2, p, li{
+  padding-right: 30px;
+  padding-left: 30px;
+}
+}
+.content-right{
+  margin: 30px;
+}
+#header-logo{
+  img{
+    float: right;
+    padding: 30px;
+  }
+}
+.footer{
+  p{
+    margin-top:40px;
+    padding-right: 30px;
 
-   }
-   img{
-     margin: 30px;
-   }
- }
+  }
+  img{
+    margin: 30px;
+  }
+}
 }
 
 
 @media screen and (min-width: 39em){
 
-  .body-container{
-    background-image: url("../images/bgphoto3.jpg");
-    width: 100%;
-    background-color: none;
-    background-repeat: no-repeat;
-      //background-position:center; /* IE fix */
+ .body-container{
+   background-image: url("http://i.imgur.com/JFv95ut.jpg");
+   width: 100%;
+   background-color: none;
+   background-repeat: no-repeat;
+     //background-position:center; /* IE fix */
 
-  }
-  #header-logo{
-    img{
-      float: right;
-      padding: 15px;
-    }
-  }
-  #content-container{
-    width: 95%;
-    height: 100%;
-    margin-left: 2.5%;
+ }
+ #header-logo{
+   img{
+     float: right;
+     padding: 15px;
+   }
+ }
+ #content-container{
+   width: 95%;
+   height: 100%;
+   margin-left: 2.5%;
 
-  }
-  #stockphoto{
-  display:block;
-  margin: 0;
+ }
+ #stockphoto{
+ display:block;
+ margin: 0;
 
-  }
+ }
 
 .webinar-header, .webinar-info{
-  height: 212px;
-  background-color: rgba(13,153,214,0.93);
-  width: 100%;
-  overflow: auto;
+ height: 212px;
+ background-color: rgba(13,153,214,0.93);
+ width: 100%;
+ overflow: auto;
 }
 .webinar-info{
-  height: 450px;
-  margin-top: 10px;
+ height: 450px;
+ margin-top: 10px;
 }
 .content-left{
-  float: left;
-  width: 60%;
-  height: 100%;
-  h1,h3,.details{
-    padding-left: 25px;
-  }
-  h2, p, li{
-    padding-left: 25px;
-  }
-  h3{
-    font-size: 13px;
-  }
-  h1{
-    font-size: 17px;
+ float: left;
+ width: 60%;
+ height: 100%;
+ h1,h3,.details{
+   padding-left: 25px;
+ }
+ h2, p, li{
+   padding-left: 25px;
+ }
+ h3{
+   font-size: 13px;
+ }
+ h1{
+   font-size: 17px;
 
-  }
-  .details{
-    font-size: 18px;
-    line-height: 19px;
-  }
-  h2{
-    font-size: 14px;
+ }
+ .details{
+   font-size: 18px;
+   line-height: 19px;
+ }
+ h2{
+   font-size: 14px;
 
-  }
-  span{
-    font-size: 13px;
-    line-height: 16px;
+ }
+ span{
+   font-size: 13px;
+   line-height: 16px;
 
-  }
-  p{
-    font-size: 13px;
-    line-height: 17px;
+ }
+ p{
+   font-size: 13px;
+   line-height: 17px;
 
-  }
-  li{
-    font-size: 13px;
-    line-height: 16px;
-  }
+ }
+ li{
+   font-size: 13px;
+   line-height: 16px;
+ }
 
 }
 
 
 
 .content-right{
-  float: left;
-  width: 40%;
-  margin: 0;
-  height: 100%;
+ float: left;
+ width: 40%;
+ margin: 0;
+ height: 100%;
 
 }
 
 .register{
-  margin-top: 25px;
-  h3{
-    font-size: 13px;
-    font-weight: 300;
-  }
-  input{
-    width: 230px;
-    height: 20px;
-    margin-top: 13px;
-    font-size: 12px;
+ margin-top: 25px;
+ h3{
+   font-size: 13px;
+   font-weight: 300;
+ }
+ input{
+   width: 230px;
+   height: 20px;
+   margin-top: 13px;
+   font-size: 12px;
 
-  }
-  button{
-    margin-top:35px;
-    font-size: 10px;
-    color: white;
+ }
+ button{
+   margin-top:35px;
+   font-size: 10px;
+   color: white;
 
-  }
+ }
 
 }
 
 #stockphoto{
-  padding-top: 10px;
+ padding-top: 10px;
 }
 .footer{
-  p{
-    margin-top:50px;
-    float: left;
-    font-size: 9px;
-    color: rgb(236,249,255);
-    margin-left: 30px;
-  }
-  img{
-    float: right;
-    margin-top:35px;
-  }
+ p{
+   margin-top:50px;
+   float: left;
+   font-size: 9px;
+   color: rgb(236,249,255);
+   margin-left: 30px;
+ }
+ img{
+   float: right;
+   margin-top:35px;
+ }
 }
 
 }
 
 
 @media screen and (min-width: 43em){
-  .content-right{
-    padding-left: 20px;
+ .content-right{
+   padding-left: 20px;
 
-  }
+ }
 }
 @media screen and (min-width: 52em) {
 
-  .body-container{
-    background-image: url("../images/bgphoto3.jpg");
-    width: 100%;
-    background-color: none;
-    background-repeat: no-repeat;
+ .body-container{
+   background-image: url("http://i.imgur.com/JFv95ut.jpg");
+   width: 100%;
+   background-color: none;
+   background-repeat: no-repeat;
 
-  }
+ }
 
-  #content-container{
-    width: 645px;
-    height: 100%;
-    margin-left: 25%;
+ #content-container{
+   width: 645px;
+   height: 100%;
+   margin-left: 25%;
 
-  }
-  .content-right{
-    padding: 0;
-  }
+ }
+ .content-right{
+   padding: 0;
+ }
 
 
 }
 
 @media screen and (min-width: 1290px) {
-  .body-container{
-    background-image: url("../images/bgphoto-1.jpg");
-      //background-position:center; /* IE fix */
+ .body-container{
+   background-image: url("http://i.imgur.com/g27G68x.jpg");
+     //background-position:center; /* IE fix */
 
-  }
+ }
 }
+
+//  // Bourbon & Neat
+// @import '../../bower_components/bourbon/dist/bourbon';
+// @import '../../bower_components/neat/app/assets/stylesheets/neat';
+// @import url(http://weloveiconfonts.com/api/?family=entypo);
+//
+// /* entypo */
+// [class*="entypo-"]:before {
+//   font-family: 'entypo', sans-serif;
+//   padding-right: 8px;
+// }
+//
+// body {
+//   /* Location of the image */
+//   background-image: url("../images/Midtown.jpg");
+//
+//   /* Background image is centered vertically and horizontally at all times */
+//   background-position: center center;
+//
+//   /* Background image doesn't tile */
+//   background-repeat: no-repeat;
+//
+//   /* Background image is fixed in the viewport so that it doesn't move when
+//      the content's height is greater than the image's height */
+//   background-attachment: fixed;
+//
+//   /* This is what makes the background image rescale based
+//      on the container's size */
+//   background-size: cover;
+//
+//   /* Set a background color that will be displayed
+//      while the background image is loading */
+//   background-color: #464646;
+//
+//
+// }
+//
+//
+// .header{
+//   margin: 0 auto;
+//   width: 400px;
+//   height: auto;
+//   padding-top: 40px;
+//   overflow: auto;
+// }
+//
+//
+//
+//
+// #header-logo{
+//   width: 145px;
+//   float: left;
+//   height: 145px;
+//   //background: #60256a;
+//   background: #60256a; /* Old browsers */
+// background: -moz-linear-gradient(top, #60256a 0%, #44173e 100%); /* FF3.6+ */
+// background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#60256a), color-stop(100%,#44173e)); /* Chrome,Safari4+ */
+// background: -webkit-linear-gradient(top, #60256a 0%,#44173e 100%); /* Chrome10+,Safari5.1+ */
+// background: -o-linear-gradient(top, #60256a 0%,#44173e 100%); /* Opera 11.10+ */
+// background: -ms-linear-gradient(top, #60256a 0%,#44173e 100%); /* IE10+ */
+// background: linear-gradient(to bottom, #60256a 0%,#44173e 100%); /* W3C */
+// filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#60256a', endColorstr='#44173e',GradientType=0 ); /* IE6-9 */
+//
+//   position: relative;
+//   -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+// -moz-box-shadow:    7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+// box-shadow:         7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+//   margin-left: 5px;
+//
+// }
+//
+// #header-logo h1{
+//   font-size: 122px;
+//   font-family: Times New Roman;
+//   color: white;
+//
+//   font-weight: 200;
+//   line-height: 150px;
+//   position: absolute;
+//   margin-top: -2px;
+//   margin-left: 31px;
+//
+// }
+// .logo{
+//   margin-top: -39px;
+//   float: left;
+// }
+// .logo h1{
+//   font-size: 60px;
+//   color: white;
+//
+//   line-height: 49px;
+//   padding-left: 10px;
+//   //border: 2px dotted yellow;
+//   font-family: 'Raleway', sans-serif;
+//
+//   letter-spacing: 0.003em;
+//   text-align: left;
+//   opacity: 0.9;
+//
+//   font-weight: 200;
+//   text-transform: uppercase;
+//
+//   text-shadow: 4px 4px 7px rgba(71, 71, 71, 1);
+// }
+//
+// h2{
+//   font-size: 17px;
+//   color: #efefef;
+//   text-align: center;
+//
+// //  word-spacing: .2em;
+//   letter-spacing: 0.08em;
+//  //text-transform: uppercase;
+// font-family: 'Lato', sans-serif;
+//   //font-family: 'Raleway', sans-serif;
+//   //font-family: Arial;
+//   margin-top: 0px;
+//   padding-top: 17px;
+//   padding-left: 10px;
+//   padding-bottom: 17px;
+//   padding-right: 10px;
+//   //word-spacing: .1em;
+//   font-weight: 200;
+//   width: 60%;
+//
+//   margin-left: auto;
+//   text-shadow: 4px 4px 7px rgba(71, 71, 71, 1);
+//   margin-right: auto;
+//  //border: 3px solid white;
+//
+//
+// }
+//
+// .body-container{
+//
+//   width: 104%;
+//   margin-left: -2%;
+//   margin-top: -35px;
+//   height: 1350px;
+//  background: hsla(0, 0%, 5%, 0.72);
+// }
+//
+//
+// .login-container{
+//   width: 350px;
+//
+//   margin-top: 15px;
+//   padding: 20px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   color: black;
+//
+// }
+//
+//
+//
+// .login-container input{
+// margin-left: 5%;
+//   padding: 7px;
+// //  background: hsla(360, 100%, 100%, 0.75);
+// background: rgb(242,245,246); /* Old browsers */
+// background: -moz-linear-gradient(top, rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%); /* FF3.6+ */
+// background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,245,246,1)), color-stop(37%,rgba(227,234,237,1)), color-stop(100%,rgba(200,215,220,1))); /* Chrome,Safari4+ */
+// background: -webkit-linear-gradient(top, rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%); /* Chrome10+,Safari5.1+ */
+// background: -o-linear-gradient(top, rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%); /* Opera 11.10+ */
+// background: -ms-linear-gradient(top, rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%); /* IE10+ */
+// background: linear-gradient(to bottom, rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%); /* W3C */
+// filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 ); /* IE6-9 */
+//
+//   width: 90%;
+//   -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+// -moz-box-shadow:    7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+// box-shadow:         7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+//   font-size: 14px;
+//   color: black;
+//   letter-spacing: .1em;
+//   text-transform: uppercase;
+//   font-family: 'Raleway', sans-serif;
+//     margin-left: 5%;
+//   border: 1px solid black;
+//   border-radius: 3px;
+//
+// }
+//
+// .login-container button{
+//   width: 90%;
+//   margin-left: 5%;
+//
+//   background: black;
+//
+//   font-family: 'Raleway', sans-serif;
+//   //font-family: 'Merriweather', serif;
+//   text-transform: uppercase;
+//  font-size: 15px;
+//   margin-top: 11px;
+//   padding: 10px;
+//   color: white;
+//   border: none;
+//   border-radius: 3px;
+//   letter-spacing: .1em;
+//
+//   transition: all 0.3s ease;
+// }
+//
+// button:hover{
+//   background-color: #efefef;
+//   color: black;
+// }
+// ::-webkit-input-placeholder {
+//    color: black;
+// }
+//
+// :-moz-placeholder { /* Firefox 18- */
+//    color: black;
+// }
+//
+// ::-moz-placeholder {  /* Firefox 19+ */
+//    color: black;
+// }
+//
+// :-ms-input-placeholder {
+//    color: black;
+// }
+//
+// .login-container h3{
+//   color:white;
+//   background: hsla(0, 0%, 0%, 0.35);
+//
+//   text-align: center;
+//   width: 90%;
+//   margin-left: 5%;
+//  font-size: 18px;
+//  padding: 10px;
+// margin-bottom: 8px;
+// font-family: 'Merriweather', serif;
+//   font-weight: 200;
+//
+//   text-transform: uppercase;
+// }
+//
+// .contact-container{
+//
+//  margin-bottom: 20px;
+//   margin-top: 25px;
+//
+// }
+//
+// .contact-container p{
+//   font-family: 'Lato', sans-serif;
+//   text-align: center;
+//   color: #e1e7ea;
+//   font-size: 14px;
+//   letter-spacing: .04em;
+// }
+// .contact-container a{
+//   color: #c4ccc6;
+//   text-decoration: none;
+//   transition: all 0.2s ease;
+//   text-decoration: underline;
+// }
+//
+// .contact-container span{
+// text-transform: uppercase;
+// letter-spacing: .08em;
+// color: white;
+// font-size: 16px;
+//
+//
+// }
+// .contact-container a:hover{
+//   color: white;
+//
+// }
+//
+//
+//
+// @media (max-width: 500px) {
+//     .header{
+//       width: 300px;
+//       margin-left: auto;
+//       margin-right: auto;
+//
+//     }
+//
+//     #header-logo{
+//       width: 120px;
+//       height: 120px;
+//     }
+//
+//     #header-logo h1{
+//       font-size: 80px;
+//       margin-top: -14px;
+//       margin-left: 34px;
+//     }
+//     .logo h1{
+//       font-size: 42px;
+//       line-height: 37px;
+//     }
+//     .logo{
+//
+//       margin-top: -20px;
+//     }
+//     h2{
+//       width: 300px;
+//       padding: 0;
+//       margin-left: auto;
+//       margin-right: auto;
+//       font-weight: 300;
+//       padding-top: 15px;
+//       padding-bottom:20px;
+//
+//     }
+//     .login-container{
+//       width: 300px;
+//       margin-left: auto;
+//       margin-right: auto;
+//
+//
+//     }
+//     .login-container input{
+//       width: 100%;
+//       margin:0;
+//
+//     }
+//     .login-container button{
+//       width: 100%;
+//       margin: 0;
+//     }
+//     .contact-container{
+//       margin-top: 50px;
+//       padding-bottom:0;
+//
+//       width: 300px;
+//       margin-left: auto;
+//       margin-right: auto;
+//       padding: 4px;
+//
+//     }
+//
+//      }
